--- a/PetFinderProject/PetFinderProject/Base.lproj/Main.storyboard
+++ b/PetFinderProject/PetFinderProject/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EJ6-wE-fgG">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -67,30 +68,31 @@
                                     <constraint firstItem="kLZ-EY-uen" firstAttribute="top" secondItem="Zom-fY-A08" secondAttribute="top" id="ftT-cD-MfG"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dEL-n3-oS7">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nfR-F1-8m7">
                                 <rect key="frame" x="0.0" y="169" width="393" height="649"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
+                                <connections>
+                                    <segue destination="jjb-wU-9tQ" kind="embed" id="gjX-m6-TNw"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="MaO-Pv-0uX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0ui-ar-GdZ"/>
-                            <constraint firstItem="dEL-n3-oS7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="77v-ER-Zox"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dEL-n3-oS7" secondAttribute="bottom" id="Bxp-fI-QSu"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dEL-n3-oS7" secondAttribute="trailing" id="Fhg-Ut-4lo"/>
-                            <constraint firstItem="dEL-n3-oS7" firstAttribute="top" secondItem="Zom-fY-A08" secondAttribute="bottom" id="XhG-Oo-2hU"/>
+                            <constraint firstItem="nfR-F1-8m7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="XZB-az-Vai"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nfR-F1-8m7" secondAttribute="bottom" id="Xgs-5q-RWq"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Zom-fY-A08" secondAttribute="trailing" id="d03-bX-zM7"/>
+                            <constraint firstItem="nfR-F1-8m7" firstAttribute="top" secondItem="Zom-fY-A08" secondAttribute="bottom" id="lL7-Zd-NZY"/>
                             <constraint firstItem="Zom-fY-A08" firstAttribute="top" secondItem="MaO-Pv-0uX" secondAttribute="bottom" id="mfe-sm-So9"/>
                             <constraint firstItem="Zom-fY-A08" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qwh-0L-OSM"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MaO-Pv-0uX" secondAttribute="trailing" id="trf-6q-MTg"/>
                             <constraint firstItem="MaO-Pv-0uX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="v2U-RX-U1b"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nfR-F1-8m7" secondAttribute="trailing" id="xol-Xx-4kE"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="lb2-eC-jle"/>
                     <connections>
                         <outlet property="petsFilterCollectionView" destination="kLZ-EY-uen" id="Db8-8n-1Ce"/>
-                        <outlet property="petsTableView" destination="dEL-n3-oS7" id="nM0-Ak-L2n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -113,6 +115,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q4z-vx-jl9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="32.824427480916029" y="-27.464788732394368"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Fzm-QI-1Of">
+            <objects>
+                <viewController id="jjb-wU-9tQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VGT-XX-dwh">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="649"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4Zo-pv-aIo">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="649"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Fii-3f-hE2">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Brh-Ep-Dqc">
+                                        <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Cgq-kc-NLL">
+                                            <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="4Zo-pv-aIo" firstAttribute="top" secondItem="VGT-XX-dwh" secondAttribute="top" id="VfV-QK-pmw"/>
+                            <constraint firstAttribute="trailing" secondItem="4Zo-pv-aIo" secondAttribute="trailing" id="WLx-Fv-xBt"/>
+                            <constraint firstAttribute="bottom" secondItem="4Zo-pv-aIo" secondAttribute="bottom" id="cg4-Gg-r45"/>
+                            <constraint firstItem="4Zo-pv-aIo" firstAttribute="leading" secondItem="VGT-XX-dwh" secondAttribute="leading" id="eMt-gc-3CA"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rLo-uQ-tzk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2089" y="-245"/>
         </scene>
     </scenes>
     <resources>
