--- a/PetFinderProject/PetFinderProject/CustomViews/PetCVC/PetCVC.xib
+++ b/PetFinderProject/PetFinderProject/CustomViews/PetCVC/PetCVC.xib
@@ -24,16 +24,16 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aaF-UA-BTY">
                                 <rect key="frame" x="10" y="5" width="272" height="100"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark.triangle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6je-rJ-wdb">
-                                        <rect key="frame" x="10" y="26.333333333333336" width="50" height="47.666666666666671"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark.triangle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6je-rJ-wdb">
+                                        <rect key="frame" x="10" y="21.333333333333336" width="60" height="57.666666666666671"/>
                                         <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="Xo0-9h-2TY"/>
-                                            <constraint firstAttribute="width" constant="50" id="yKq-0c-lVG"/>
+                                            <constraint firstAttribute="height" constant="60" id="Xo0-9h-2TY"/>
+                                            <constraint firstAttribute="width" constant="60" id="yKq-0c-lVG"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HCE-EJ-vdr">
-                                        <rect key="frame" x="70" y="10" width="192" height="20"/>
+                                        <rect key="frame" x="80" y="10" width="182" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="CKg-ck-odC"/>
                                         </constraints>
@@ -42,7 +42,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gender" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n7h-Z8-CxG">
-                                        <rect key="frame" x="70" y="40" width="192" height="20"/>
+                                        <rect key="frame" x="80" y="40" width="182" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="1sl-dg-nVe"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="W8g-X3-eFH"/>
@@ -52,7 +52,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uLY-Q0-uTB">
-                                        <rect key="frame" x="70" y="70" width="192" height="20"/>
+                                        <rect key="frame" x="80" y="70" width="182" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="xvr-iM-fUh"/>
                                         </constraints>
