--- a/PetFinderProject/PetFinderProject/CustomViews/FilterCVC/FilterCVC.xib
+++ b/PetFinderProject/PetFinderProject/CustomViews/FilterCVC/FilterCVC.xib
@@ -11,17 +11,20 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FilterCVC" id="gTV-IL-0wX" customClass="FilterCVC" customModule="PetFinderProject" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="131" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="139" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="131" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="139" height="60"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QDY-FS-Rf9">
-                        <rect key="frame" x="0.0" y="0.0" width="131" height="60"/>
+                        <rect key="frame" x="0.0" y="0.0" width="139" height="60"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="filter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZEh-Yj-fhW">
-                                <rect key="frame" x="5" y="20.333333333333336" width="121" height="19.333333333333336"/>
+                                <rect key="frame" x="5" y="20.333333333333336" width="129" height="19.333333333333336"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="Wwz-ws-BXf"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -33,6 +36,11 @@
                             <constraint firstItem="ZEh-Yj-fhW" firstAttribute="centerY" secondItem="QDY-FS-Rf9" secondAttribute="centerY" id="bWw-gJ-Z9q"/>
                             <constraint firstItem="ZEh-Yj-fhW" firstAttribute="leading" secondItem="QDY-FS-Rf9" secondAttribute="leading" constant="5" id="sEg-AM-KrK"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="25"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
             </view>
@@ -43,11 +51,11 @@
                 <constraint firstItem="QDY-FS-Rf9" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="JUp-AH-Hfo"/>
                 <constraint firstAttribute="trailing" secondItem="QDY-FS-Rf9" secondAttribute="trailing" id="wzX-fE-xm2"/>
             </constraints>
-            <size key="customSize" width="131" height="60"/>
+            <size key="customSize" width="139" height="60"/>
             <connections>
                 <outlet property="filterLabel" destination="ZEh-Yj-fhW" id="0tv-Lw-f2Y"/>
             </connections>
-            <point key="canvasLocation" x="191.6030534351145" y="-7.746478873239437"/>
+            <point key="canvasLocation" x="197.70992366412213" y="-7.746478873239437"/>
         </collectionViewCell>
     </objects>
 </document>
