--- a/PetFinderProject/PetFinderProject/CustomViews/PetCell/PetCell.xib
+++ b/PetFinderProject/PetFinderProject/CustomViews/PetCell/PetCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PetCVC" id="gTV-IL-0wX" customClass="PetCVC" customModule="PetFinderProject" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PetCell" id="gTV-IL-0wX" customClass="PetCell" customModule="PetFinderProject" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="292" height="110"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
